--- a/core/configs/.gitconfig
+++ b/core/configs/.gitconfig
@@ -31,6 +31,10 @@
   # Forcepush, but fail if the remote has been updated since you last pulled.
   # Prevents clobbering other people's commits on the same branch unless you really, really want to.
   forcepush = push --force-with-lease
+	co = checkout
+	br = branch
+	ci = commit
+	st = status
 
 [apply]
 
